# FCG_MineSweeper

./: .gitignore  00_hello.cpp  01_celle.cpp  01_starting_background.cpp  1b_Tappa.md  CMakeLists.txt  README.md  Tappa0.md  Tappa1.md  chat.md  main  prova.cpp  richieste_prof.md  starting_background.cpp  textures.hpp  textures_fonts.hpp
Tappa8/: 8_rules_and_title.cpp
Tappa_00/: 00_Tappa.md  00_hello.cpp
Tappa_1a/: 1a_Tappa.md  1a_cell_starting_texture.cpp  main
Tappa_1b/: 1b.cpp  1b_Tappa.md  1b_interactive_cell.cpp
Tappa_1c/: 1c.cpp  1c_victory_defeat_restart.cpp  Tappa_1c.md
Tappa_2a/: 2a.cpp  2a_header.cpp  Tappa_2a.md
Tappa_2b/: 2b_intective_header.cpp  Tappa_2b.md
Tappa_3/: 3_border.cpp  Tappa_3.md
Tappa_4a/: 4a_graphic_control_panel.cpp  Tappa_4a.md
Tappa_4b/: 4b_interactive_control_panel.cpp  4b_interactive_overlay.cpp  Tappa_4b.md
Tappa_5/: 5_start_panel.cpp  Tappa_5.md
Tappa_5a/: 5a_graphic_start.cpp
Tappa_6/: 6_levels.cpp  Tappa_6.md
Tappa_7a/: 7a_graphic_exit.cpp  Tappa_7a.md
Tappa_7b/: 7b_interactive_exit.cpp  Tappa_7b.md
Tappa_8/: 8_rules_and_title.cpp  Tappa_8.md
tappa_2/: 2_Tappa.md
